--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <h1 id="heroDescriptionHeader">Swift JSON</h1>
                     <h2 id="heroDescriptionSubHeader">The easiest way to create Swift classes from JSON</h2>
                     <a href="#"><div class="bigButton"><h1>Download 0.2</h1></div></a>
-                    <a href="#"><div class="bigButton blueButton"><h1>Learn More</h1></div></a>
+                    <a href="https://github.com/swiftjson/SwiftJson/blob/master/README.md"><div class="bigButton blueButton"><h1>Learn More</h1></div></a>
                 </div>
             </div>
             <div class="col-1-2">
@@ -33,6 +33,6 @@
             </div>
             
         </div>
-        <a href="https://github.com/pvwoods/SwiftJson"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://camo.githubusercontent.com/567c3a48d796e2fc06ea80409cc9dd82bf714434/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f6c6566745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_left_darkblue_121621.png"></a>
+        <a href="https://github.com/swiftjson/SwiftJson"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://camo.githubusercontent.com/567c3a48d796e2fc06ea80409cc9dd82bf714434/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f6c6566745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_left_darkblue_121621.png"></a>
     </body>
 </html>
