appropriate download link

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     </div>
                     <h1 id="heroDescriptionHeader">Swift JSON</h1>
                     <h2 id="heroDescriptionSubHeader">The easiest way to create Swift classes from JSON</h2>
-                    <a href="#"><div class="bigButton"><h1>Download 0.2</h1></div></a>
+                    <a href="https://github.com/swiftjson/SwiftJson/releases/download/0.1/SwiftJson.zip"><div class="bigButton"><h1>Download 0.1</h1></div></a>
                     <a href="https://github.com/swiftjson/SwiftJson/blob/master/README.md"><div class="bigButton blueButton"><h1>Learn More</h1></div></a>
                 </div>
             </div>
